Mejoras 5- POO Ejercicios Clases Objetor

--- a/1-Ramp_Up/Python/5-OOP/Practica/Ejercicios_Clases_Objetos.ipynb
+++ b/1-Ramp_Up/Python/5-OOP/Practica/Ejercicios_Clases_Objetos.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,17 +126,20 @@
     "        Output:\n",
     "            list[int]\n",
     "        \"\"\"\n",
-    "        aumento = 1.2\n",
-    "        if inversion > 1000:\n",
-    "            aumento = 1.5\n",
-    "        for pos, venta in enumerate(self.ventas_3_meses):\n",
-    "            self.ventas_3_meses[pos] = venta * aumento \n",
+    "        # aumento = 1.2\n",
+    "        # if inversion >= 1000:\n",
+    "        #     aumento = 1.5\n",
+    "        # for pos, venta in enumerate(self.ventas_3_meses):\n",
+    "        #     self.ventas_3_meses[pos] = venta * aumento\n",
+    "    \n",
+    "        self.ventas_3_meses = [ventas * (1.5 if inversion>=1000 else 1.2) for ventas in self.ventas_3_meses] \n",
+    "        \n",
     "        return self.ventas_3_meses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +168,7 @@
       "Dirección Calle del Perro, 5\n",
       "Empleados 5\n",
       "Ventas últimos 3 meses [5, 6, 7]\n",
+      "{'nombre': 'Tienda 1', 'direccion': 'Calle del Perro, 5', 'empleados': 5, 'ventas_3_meses': [5, 6, 7]}\n",
       "Descipción Tienda 1 situada en Calle del Perro, 5\n",
       "Media 6.0\n",
       "Total ventas 18\n",
@@ -184,6 +188,7 @@
     "print(\"Dirección\",tienda_1.direccion)\n",
     "print(\"Empleados\",tienda_1.empleados)\n",
     "print(\"Ventas últimos 3 meses\",tienda_1.ventas_3_meses)\n",
+    "print(tienda_1.__dict__)\n",
     "\n",
     "# Métodos\n",
     "print(\"Descipción\", tienda_1.descripcion_tienda())\n",
@@ -195,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +457,7 @@
        "'GUAU! Pintxo'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
