--- a/2-Data Analysis/2-Dataframes y estadística/Teoría/1-Intro_Pandas.ipynb
+++ b/2-Data Analysis/2-Dataframes y estadística/Teoría/1-Intro_Pandas.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "70164ae2-2cda-42e4-b65b-de5f94550ef4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a6cbc9d3-4c3c-468f-83a7-b2f47039bf2a",
    "metadata": {
     "collapsed": false,
@@ -65,7 +65,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2299,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "id": "70d74c16-2cf5-47cc-92eb-228252a03ff6",
    "metadata": {
     "collapsed": false,
@@ -2315,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "75672d5e-4aeb-44dc-a46c-36a46e0bb13e",
    "metadata": {
     "collapsed": false,
@@ -2323,14 +2323,25 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([3, 5, 7], dtype='int64')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# indA & indB  # intersection"
+    "indA.intersection(indB) # intersection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "f1867ad0-7bd9-4cc3-a027-86b156f980f0",
    "metadata": {
     "collapsed": false,
@@ -2338,17 +2349,20 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([1, 2, 3, 5, 7, 9, 11], dtype='int64')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# indA | indB  # union"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6eb4b177-6360-4e4d-870b-c4cdc211763b",
-   "metadata": {},
-   "source": [
-    "También se puede acceder a estas operaciones mediante métodos de objetos, por ejemplo ``indA.intersection(indB)``."
+    "indA.union(indB)  # union"
    ]
   },
   {
@@ -2379,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "b999ab8d-960a-4f9d-9322-360861f38e34",
    "metadata": {
     "collapsed": false,
@@ -2405,6 +2419,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "data = pd.Series([0.25, 0.5, 0.75, 1.0],\n",
     "                 index=['a', 'b', 'c', 'd'])\n",
     "data"
@@ -2766,7 +2781,7 @@
    "id": "82226c15-431c-4a0c-a9a8-45f681c34168",
    "metadata": {},
    "source": [
-    "### Indexers: loc, iloc, and ix\n",
+    "### Indexers: loc y iloc\n",
     "\n",
     "Estas convenciones de corte e indexación pueden ser una fuente de confusión.\n",
     "Por ejemplo, si tu ``Serie`` tiene un índice entero explícito, una operación de indexación como **``data[1]`` utilizará los índices explícitos, mientras que una operación de slicing como ``data[1:3]`` utilizará el índice implícito de estilo Python.**"
@@ -2774,7 +2789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "18adca80-4e3c-421b-b6b2-5cc5fcbcb8f3",
    "metadata": {
     "collapsed": false,
@@ -2792,7 +2807,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2804,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "7ce99c54-9e3c-4a4a-a24d-a03d077f4505",
    "metadata": {
     "collapsed": false,
@@ -2819,7 +2834,7 @@
        "'a'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2831,7 +2846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "c3f7aee0-021a-4b84-a9ce-157eacbd45c9",
    "metadata": {
     "collapsed": false,
@@ -2848,7 +2863,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2871,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "d73f5219-6461-42ed-8605-a703470b6479",
    "metadata": {},
    "outputs": [
@@ -2884,7 +2899,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2895,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "a23b7d2e",
    "metadata": {},
    "outputs": [
@@ -2907,7 +2922,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2919,7 +2934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "4d2c700a-4da1-475d-8455-2db786320e61",
    "metadata": {
     "collapsed": false,
@@ -2934,7 +2949,7 @@
        "'a'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2945,7 +2960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "620483e7-5c22-43f4-9c99-898c5839a318",
    "metadata": {
     "collapsed": false,
@@ -2962,7 +2977,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2981,7 +2996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "id": "2df53ebe-04e7-4119-84e6-4b80c5d8b83e",
    "metadata": {},
    "outputs": [
@@ -2994,7 +3009,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3005,7 +3020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "id": "79748a8c-e501-46cf-a162-cb8c0e30fd9e",
    "metadata": {
     "collapsed": false,
@@ -3020,7 +3035,7 @@
        "'b'"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3031,7 +3046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "id": "e7661fd8-6ab4-4a21-9c26-72b865d203e0",
    "metadata": {
     "collapsed": false,
@@ -3047,7 +3062,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3061,9 +3076,6 @@
    "id": "526a737d-f54b-4776-944c-4a0ea8ca5a37",
    "metadata": {},
    "source": [
-    "Un tercer atributo de indexación, ``ix``, es un híbrido de los dos, y para los objetos ``Series`` es equivalente a la indexación estándar basada en ``[]``.\n",
-    "El propósito del indexador ``ix`` se hará más evidente en el contexto de los objetos ``DataFrame``, que discutiremos en un momento.\n",
-    "\n",
     "Un principio rector del código Python es que \"lo explícito es mejor que lo implícito\".\n",
     "La naturaleza explícita de ``loc`` y ``iloc`` los hace muy útiles para mantener un código limpio y legible; especialmente en el caso de los índices de enteros, **recomiendo usarlos tanto para hacer el código más fácil de leer y entender, como para prevenir errores sutiles debido a la convención de indexación/corte mixto.**"
    ]
@@ -6523,7 +6535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -6537,7 +6549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
